--- a/src/components/AnimatedLetters/AnimatedLetters.scss
+++ b/src/components/AnimatedLetters/AnimatedLetters.scss
@@ -1,11 +1,10 @@
-@import "../../sass/variables.scss";
+@import "../../sass/variables";
+
 .text-animate {
   display: inline-block;
   opacity: 0;
-  animation: bounceIn;
-  animation-duration: 1s;
-  animation-delay: 1s;
-  animation-fill-mode: forwards;
+  animation: fadeInUp 0.6s ease forwards;
+  animation-delay: 0.5s;
   min-width: 10px;
 }
 
@@ -13,8 +12,9 @@
   display: inline-block;
   animation-fill-mode: both;
   cursor: pointer;
+
   &:hover {
     animation: rubberBand 1s;
-    color: $color-tertiary;
+    color: $accent-coral;
   }
 }
